<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingRight="150dp"
    android:paddingEnd="150dp"
    tools:ignore="RtlSymmetry">
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/str1"
        android:layout_weight="1"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/str2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/str3" />
</LinearLayout >